--- a/data-document-processor/build.gradle
+++ b/data-document-processor/build.gradle
@@ -9,4 +9,12 @@ dependencies {
 	api projects.dataDocumentModel
 
 	compileOnly mn.micronaut.inject.java
+
+	testAnnotationProcessor mn.micronaut.inject.java
+
+	testImplementation mn.micronaut.inject.groovy
+	testImplementation mn.micronaut.inject.java.test
+	testImplementation projects.dataDocumentTck
+	testImplementation projects.dataMongodb
+
 }
