--- a/data-document-processor/build.gradle
+++ b/data-document-processor/build.gradle
@@ -17,4 +17,7 @@ dependencies {
 	testImplementation projects.dataDocumentTck
 	testImplementation projects.dataMongodb
 
+	if (!JavaVersion.current().isJava9Compatible()) {
+		testImplementation files(org.gradle.internal.jvm.Jvm.current().toolsJar)
+	}
 }
